--- a/main.css
+++ b/main.css
@@ -54,8 +54,8 @@ body {
 }
 
 .site__header {
-    padding-top: 15px;
-    padding-bottom: 48px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0562443);
 }
 
 .header__wrapper {
@@ -64,9 +64,16 @@ body {
     justify-content: space-between;
 }
 
+.logo__wrapper {
+    padding-top: 25px;
+    padding-bottom: 24px;
+}
+
 .moon {
     display: flex;
     align-items: center;
+    padding-top: 29px;
+    padding-bottom: 29px;
 }
 
 .header__text {
@@ -77,5 +84,40 @@ body {
     margin-left: 11px;
 }
 
+.site__form {
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
 
+.form__wrapper {
+    display: flex;
+    align-items: center;
+}
+
+input {
+    width: 480px;
+    font-family: 'Nunito sans', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #848484;
+    padding-top: 18px;
+    padding-right: auto;
+    padding-bottom: 18px;
+    padding-left: 34px;
+    background-color: #fff;
+    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
+    border-radius: 5px;
+    margin-right: 600px;
+}
+
+select {
+    width: 200px;
+    padding-top: 18px;
+    padding-right: 17px;
+    padding-bottom: 18px;
+    padding-left: 24px;
+    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
+    border-radius: 5px;
+}
 
